<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/app_intro"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/q1"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp">

            <RadioButton
                android:id="@+id/q1_a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_a1" />

            <RadioButton
                android:id="@+id/q1_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_a2" />

            <RadioButton
                android:id="@+id/q1_a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_a3" />

            <RadioButton
                android:id="@+id/q1_a4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_a4" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/q2"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/q2_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:hint="@string/q2_hint"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/q3"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp">

            <RadioButton
                android:id="@+id/q3_a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3_a1" />

            <RadioButton
                android:id="@+id/q3_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3_a2" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/q4"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/q4_a1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/q4_a1" />

        <CheckBox
            android:id="@+id/q4_a2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/q4_a2" />

        <CheckBox
            android:id="@+id/q4_a3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/q4_a3" />

        <CheckBox
            android:id="@+id/q4_a4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/q4_a4" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:onClick="submitQuiz"
            android:text="@string/submit" />

    </LinearLayout>

</ScrollView>